--- a/style.css
+++ b/style.css
@@ -6,12 +6,16 @@
   text-decoration: none;
 }
 
+body {
+  background-color: #6c3c9d;
+}
+
 header {
   background-color: lightgray;
   display: flex;
   justify-content: space-between;
   padding: 16px;
-  margin-bottom: 16px;
+
 }
 
 nav {
@@ -30,47 +34,41 @@ nav, ul, li {
 
 
 }
- h1, h2 {
-  color: white;
-  width: 100%;
-  max-width: 664px;
+ main {
+  color: #ffffff;
+  padding-top: 16px;
+  padding-left: 12px;
+  width: 800px;
   margin: 0 auto;
-}
 
-h1 {
-  font-size: 40px;
+ }
+ h1 {
+  font-size: 3rem;
 
-}
+ }
+ h2{
+  font-size: 1.5rem;
+  margin-bottom: 20px;
+ }
+ h3{
+  font-size: 1.2rem;
+  margin-bottom: 12px;
+ }
+ section {
+   display: flex;
+ }
+  section div {
+   background-image: url("./img/bg_laranja.jpg");
+   padding: 24px;
+   height: 200px;
+   width: 300px;
+   border-radius: 16px;
 
-h2 {
-  font-size: 15px;
-}
-h3 {
-  font-size: 12;
-}
-section {
-  display: flex;
-  justify-content: center;
-  padding: 16px;
-  gap: 20px;
-}
-div {
-  width: 300px;
-  height: 200px;
-  background: url(/img/bg_laranja.jpg) no-repeat;
-  padding: 16px;
-  border-radius: 8px;
-}
-
-section h3 {
-  color: white;
-}
-p {
-  color: white;
-}
-
-body {
+  }
+  section div:first-of-type {
+    margin-right: 16px;
+  }
   
-  background-color: #593493;
-}
+  
+  
 
